--- a/index.html
+++ b/index.html
@@ -5,5 +5,108 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <a href="./index.html">WEBSTUDIO</a>
+      <nav>
+        <ul>
+          <li><a href="./studio.html">Studio</a></li>
+          <li><a href="./portfolio.html">Portfolio</a></li>
+          <li><a href="./contacts.html">Contacts</a></li>
+        </ul>
+      </nav>
+      <address>
+        <ul>
+          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        </ul>
+      </address>
+    </header>
+
+    <main>
+      <h1>Effective Solutions for Your Business</h1>
+      <button type="button">Order Service</button>
+      <section>
+        <ul>
+          <li>
+            <h2>Strategy</h2>
+            <p>
+              Our goal is to identify the business problem to walk away with the
+              perfect and creative solution.
+            </p>
+          </li>
+          <li>
+            <h2>Punctuality</h2>
+            <p>
+              Bring the key message to the brand's audience for the best price
+              within the shortest possible time.
+            </p>
+          </li>
+          <li>
+            <h2>Diligence</h2>
+            <p>
+              Research and confirm brands that present the strongest digital
+              growth opportunities and minimize risk.
+            </p>
+          </li>
+          <li>
+            <h2>Technologies</h2>
+            <p>
+              Design practice focused on digital experiences. We bring forth a
+              deep passion for problem-solving.
+            </p>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2>Our Team</h2>
+        <ul>
+          <li>
+            <img
+              src="./images/img (4).jpg"
+              alt="Photo Product Designer"
+              width="264"
+              height="260"
+            />
+            <p>Mark Guerrero Product Designer</p>
+          </li>
+          <li>
+            <img
+              src="./images/img (1) (1).jpg"
+              alt="Photo Frontend Developer"
+              width="264"
+              height="260"
+            />
+            <p>Tom Ford Frontend Developer</p>
+          </li>
+          <li>
+            <img
+              src="/images/img (2) (1).jpg"
+              alt="Photo Marketing Manager"
+              width="264"
+              height="260"
+            />
+            <p>Camila Garcia Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images/img (3) (1).jpg"
+              alt="Photo UI Designer"
+              width="264"
+              height="260"
+            />
+            <p>Daniel Wilson UI Designer</p>
+          </li>
+        </ul>
+      </section>
+    </main>
+
+    <footer>
+      <h3>WEBSTUDIO</h3>
+      <p>
+        Increase the flow of customers and sales for your business with digital
+        marketing & growth solutions.
+      </p>
+    </footer>
+  </body>
 </html>
