second iteration homework 1

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   </head>
   <body>
     <header>
-      <a href="./index.html">WEBSTUDIO</a>
       <nav>
+        <a href="./index.html">WebStudio</a>
         <ul>
           <li><a href="./studio.html">Studio</a></li>
           <li><a href="./portfolio.html">Portfolio</a></li>
@@ -17,40 +17,43 @@
       </nav>
       <address>
         <ul>
-          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
           <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
         </ul>
       </address>
     </header>
 
     <main>
-      <h1>Effective Solutions for Your Business</h1>
-      <button type="button">Order Service</button>
       <section>
+        <h1>Effective Solutions for Your Business</h1>
+        <button type="button">Order Service</button>
+      </section>
+      <section>
+        <h2>Section 2</h2>
         <ul>
           <li>
-            <h2>Strategy</h2>
+            <h3>Strategy</h3>
             <p>
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
-            <h2>Punctuality</h2>
+            <h3>Punctuality</h3>
             <p>
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
-            <h2>Diligence</h2>
+            <h3>Diligence</h3>
             <p>
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h2>Technologies</h2>
+            <h3>Technologies</h3>
             <p>
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
@@ -63,46 +66,50 @@
         <ul>
           <li>
             <img
-              src="./images/img (4).jpg"
+              src="./images/img4.jpg"
               alt="Photo Product Designer"
               width="264"
               height="260"
             />
-            <p>Mark Guerrero Product Designer</p>
+            <h3>Mark Guerrero</h3>
+            <p>Product Designer</p>
           </li>
           <li>
             <img
-              src="./images/img (1) (1).jpg"
+              src="./images/img1.jpg"
               alt="Photo Frontend Developer"
               width="264"
               height="260"
             />
-            <p>Tom Ford Frontend Developer</p>
+            <h3>Tom Ford</h3>
+            <p>Frontend Developer</p>
           </li>
           <li>
             <img
-              src="/images/img (2) (1).jpg"
+              src="/images/img2.jpg"
               alt="Photo Marketing Manager"
               width="264"
               height="260"
             />
-            <p>Camila Garcia Marketing</p>
+            <h3>Camila Garcia</h3>
+            <p>Marketing</p>
           </li>
           <li>
             <img
-              src="./images/img (3) (1).jpg"
+              src="./images/img3.jpg"
               alt="Photo UI Designer"
               width="264"
               height="260"
             />
-            <p>Daniel Wilson UI Designer</p>
+            <h3>Daniel Wilson</h3>
+            <p>UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
 
     <footer>
-      <h3>WEBSTUDIO</h3>
+      <a href="./index.html">WebStudio</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
