--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
           </li>
           <li>
             <img
-              src="/images/img2.jpg"
+              src="./images/img2.jpg"
               alt="Photo Marketing Manager"
               width="264"
               height="260"
